compile.errors
In file included from testMap.cpp:30:
Map.hpp: In instantiation of ‘Map<Key, Val, Compare>::IterBoolMapT Map<Key, Val, Compare>::try_emplace(const Key&, const Val&) [with Key = main()::intint; Val = main()::intstr; Compare = std::less<main()::intint>; Map<Key, Val, Compare>::IterBoolMapT = std::pair<std::_Rb_tree_const_iterator<std::_List_iterator<Map<main()::intint, main()::intstr>::T> >, bool>]’:
testMap.cpp:153:45:   required from here
Map.hpp:235:29: error: ‘Map<main()::intint, main()::intstr>::MapT’ {aka ‘class std::set<std::_List_iterator<Map<main()::intint, main()::intstr>::T>, Map<main()::intint, main()::intstr>::LessIter, std::allocator<std::_List_iterator<Map<main()::intint, main()::intstr>::T> > >’} has no member named ‘try_emplace’; did you mean ‘emplace’?
  235 |       iter_bool_map_ = map_.try_emplace(list_it_,0);
      |                        ~~~~~^~~~~~~~~~~
      |                        emplace
Map.hpp: In instantiation of ‘std::string Map<Key, Val, Compare>::to_string() [with Key = main()::intint; Val = main()::intstr; Compare = std::less<main()::intint>; std::string = std::__cxx11::basic_string<char>]’:
testMap.cpp:154:31:   required from here
Map.hpp:148:17: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  148 |     tmp += itm->first->key_.to_string() + " ";
      |            ~~~~~^~~~~
Map.hpp:149:17: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  149 |     tmp += itm->first->val_.to_string() + " ";
      |            ~~~~~^~~~~
Map.hpp:150:32: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  150 |     tmp += std::to_string(itm->first->clr_) + " | ";
      |                           ~~~~~^~~~~
In file included from testMap.cpp:30:
Map.hpp: In instantiation of ‘std::string Map<Key, Val, Compare>::to_string() [with Key = main()::intint; Val = main()::intstr; Compare = std::less<main()::intint>; std::string = std::__cxx11::basic_string<char>]’:
testMap.cpp:154:31:   required from here
Map.hpp:148:17: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  148 |     tmp += itm->first->key_.to_string() + " ";
      |            ~~~~~^~~~~
Map.hpp:149:17: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  149 |     tmp += itm->first->val_.to_string() + " ";
      |            ~~~~~^~~~~
Map.hpp:150:32: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  150 |     tmp += std::to_string(itm->first->clr_) + " | ";
      |                           ~~~~~^~~~~
In file included from testMap.cpp:30:
Map.hpp: In instantiation of ‘std::string Map<Key, Val, Compare>::to_string() [with Key = main()::intint; Val = main()::intstr; Compare = std::less<main()::intint>; std::string = std::__cxx11::basic_string<char>]’:
testMap.cpp:154:31:   required from here
Map.hpp:149:17: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  149 |     tmp += itm->first->val_.to_string() + " ";
      |            ~~~~~^~~~~
Map.hpp:150:32: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  150 |     tmp += std::to_string(itm->first->clr_) + " | ";
      |                           ~~~~~^~~~~
In file included from testMap.cpp:30:
Map.hpp: In instantiation of ‘std::string Map<Key, Val, Compare>::to_string() [with Key = main()::intint; Val = main()::intstr; Compare = std::less<main()::intint>; std::string = std::__cxx11::basic_string<char>]’:
testMap.cpp:154:31:   required from here
Map.hpp:150:32: error: ‘const struct std::_List_iterator<Map<main()::intint, main()::intstr>::T>’ has no member named ‘first’
  150 |     tmp += std::to_string(itm->first->clr_) + " | ";
      |                           ~~~~~^~~~~
